--- a/css/white-results.css
+++ b/css/white-results.css
@@ -5,7 +5,7 @@
     /* Fondo Blanco Puro */
     color: #000000;
     /* Texto Negro */
-    padding: 100px 0;
+    padding: 60px 0;
     font-family: 'Montserrat', sans-serif;
 }
 
